--- a/android/Text/app/src/main/res/layout/activity_main.xml
+++ b/android/Text/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,23 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="姓名："
+        android:textColor="#66ccff"
+        tools:layout_editor_absoluteY="7dp"
+        tools:layout_editor_absoluteX="83dp" />
+
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="67dp"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:hint="请输入你的姓名"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp" />
+
 </android.support.constraint.ConstraintLayout>
