--- a/android/Text/app/src/main/res/layout/activity_main.xml
+++ b/android/Text/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.wsc.text.MainActivity">
-
+//LinearLayout 线性布局
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="33dp"
         android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -21,17 +22,17 @@
         android:layout_height="wrap_content"
         android:text="姓名："
         android:textColor="#66ccff"
-        tools:layout_editor_absoluteY="7dp"
-        tools:layout_editor_absoluteX="83dp" />
+        tools:layout_editor_absoluteY="16dp"
+        tools:layout_editor_absoluteX="16dp" />
 
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="67dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:hint="请输入你的姓名"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp" />
+        tools:layout_editor_absoluteY="-2dp"
+        tools:layout_editor_absoluteX="71dp" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
