--- a/android/Text/app/src/main/res/layout/activity_main2.xml
+++ b/android/Text/app/src/main/res/layout/activity_main2.xml
@@ -5,5 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.wsc.text.Main2Activity">
-
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="跳转第二页"/>
 </android.support.constraint.ConstraintLayout>
