--- a/android/Text/app/src/main/res/menu/main.xml
+++ b/android/Text/app/src/main/res/menu/main.xml
@@ -6,4 +6,7 @@
     <item
         android:id="@+id/remove_item"
         android:title="REMOVE"/>
+    <item
+        android:id="@+id/intent_item"
+        android:title="INTENT" />
 </menu>
