--- a/android/Text/app/src/main/res/layout/activity_main.xml
+++ b/android/Text/app/src/main/res/layout/activity_main.xml
@@ -66,5 +66,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="跳转活动" />
+    <Button
+        android:id="@+id/button4"
+        android:layout_wdth="match_parent"
+        android:layout_height="wrap_content"
+        android:text="带图片的toast"i
+        />
 
 </LinearLayout>
