--- a/android/Text/app/src/main/res/layout/activity_main.xml
+++ b/android/Text/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,10 @@
         android:id="@+id/button4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="带图片的toast"
-        />
-
+        android:text="带图片的toast" />
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="完全自定义的toast" />
 </LinearLayout>
