--- a/android/Text/app/src/main/res/layout/activity_context_menu.xml
+++ b/android/Text/app/src/main/res/layout/activity_context_menu.xml
@@ -6,11 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.example.wsc.text.ContextMenuActivity">
 
-    <ListView
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp"
-        android:id="@+id/listView"
-        />
+<ListView
+    android:id="@+id/listView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+
+    />
 </android.support.constraint.ConstraintLayout>
