--- a/android/Text/app/src/main/res/layout/activity_main2.xml
+++ b/android/Text/app/src/main/res/layout/activity_main2.xml
@@ -26,4 +26,10 @@
         android:layout_height="wrap_content"
         android:text="子菜单练习" />
 
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="隐式intent练习" />
+
 </LinearLayout>
