--- a/android/Text/app/src/main/res/layout/activity_main2.xml
+++ b/android/Text/app/src/main/res/layout/activity_main2.xml
@@ -36,4 +36,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="向下一活动传递数据" />
+
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="返回数据给上一活动" />
 </LinearLayout>
