--- a/android/Text/app/src/main/res/layout/activity_sub_menu.xml
+++ b/android/Text/app/src/main/res/layout/activity_sub_menu.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context="com.example.wsc.text.SubMenuActivity">
 
+    <Button
+        android:id="@+id/button10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="返回上一活动数据" />
 </android.support.constraint.ConstraintLayout>
