--- a/MusicPlayer/app/src/main/res/values/colors.xml
+++ b/MusicPlayer/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="toolbarbackground">#FFDEAD</color>
+    <color name="background">#FFE4C4</color>
 </resources>
